plugins {
    id 'java'
    id 'jacoco'
    id 'java-library'
    id "org.flywaydb.flyway" version "10.11.0"
    id "org.sonarqube" version "4.4.1.3373"
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'fontys.ind'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// Software metrics
jacocoTestReport {
    reports {
        xml.required = true
    }
}

flyway {
    url = 'jdbc:mysql://localhost:3306/fitsphere'
    user = 'root'
    password = 'rihanna2912'
    driver = 'com.mysql.cj.jdbc.Driver'
    baselineOnMigrate = false
    // driver = 'com.mysql.jdbc.Driver'
}

sonar {
    properties {
        property "sonar.projectKey", "FitSphere"
        property "sonar.organization", "Fontys"
        property "sonar.host.url", "http://localhost:9000"
        property "sonar.token", "sqp_d06d805b2c2388d4dfc5dd731b3b128ebe92a40b"
        property "sonar.exclusions", [
                "src/main/java/fontys/ind/configuration/**",
                "src/main/java/fontys/ind/persistence/**",
                "src/main/java/fontys/ind/domain/**"
        ]
    }
}

// Dependencies
dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // JUnit
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    // Flyway
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // H2 Database
    runtimeOnly 'com.h2database:h2'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // Commons Math
    api 'org.apache.commons:commons-math3:3.6.1'

    // Guava
    implementation 'com.google.guava:guava:23.0'

    // MySQL Connector
    implementation 'mysql:mysql-connector-java:8.0.28'
    // implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
    runtimeOnly 'mysql:mysql-connector-java'
    // TODO: Remove the version

    // JJWT (JSON Web Token)
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    // implementation 'io.jsonwebtoken:jjwt:0.2'

    // Springdoc OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

    // Mockito & Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'

    // Mappers
    implementation 'org.mapstruct:mapstruct:1.5.0.Beta2'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.0.Beta2'
}

test {
    useJUnitPlatform()
}